# srs-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
examples/: particle_config.json  preprocess.py  preprocess.sh  runner.sh  sc_analysis.py  sc_analysis.sh  sc_processing.py  segment_track.py  segment_track.sh  setup_zarr.py
srs_tools/: __init__.py  _version.py  gui.py  lockin_helpers.py  main_loop.py
srs_tools/analysis/: __init__.py  background.py  core.py  segmentation_helpers.py  util.py
srs_tools/experiment/: __init__.py  gui.py  lockin_helpers.py
srs_tools/io/: __init__.py  io.py  srs_io.py
srs_tools/simulations/: __init__.py  simulations.py
srs_tools/tests/: indexer_ref.csv  test_background_estimator.py  test_io.py
