[metadata]
name = srs_tools
description = Helpers for running SRS experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrussell25/srs-tools
author = John Russell
author_email = johncrussell25@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/jrussell25/srs-tools

[options]
packages = find:
install_requires =
    ipywidgets
    numpy
    pandas
    tables
    xarray
python_requires = >=3.8
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
doc =
    Sphinx>=1.5
    jupyter-sphinx
    myst-nb
    numpydoc
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
testing =
    nbval
    pytest
    pytest-cov
    tox
    tox-conda

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
